# OglViewer3D

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md
Arch/: .$MVCDiagram.drawio.bkp  Controller.drawio  MVCDiagram.drawio  Model.drawio  View.drawio
Arch/UIArch/: CommonView.drawio  RenderView.drawio  ViewDiagram.drawio
Source/: CMakeLists.txt  main.cpp
Source/Controller/: CMakeLists.txt  IModelProvider.h  IModelService.h  IViewObserver.h  ViewerController.cpp  ViewerController.h
Source/Controller/ModelService/: ModelService.cpp  ModelService.h
Source/Controller/Serializer/: ModelSerializer.cpp
Source/Document/: CMakeLists.txt
Source/Math/: CMakeLists.txt  Matrix.h
Source/Model/: CMakeLists.txt  Creator.h  IModel.h  IModelSerializer.h  IModelService.h  Model.cpp
Source/Model/ModelImpl/: Model.cpp  Model.h
Source/Model/Serializer/: ModelSerializer.cpp  ModelSerializer.h
Source/UI/: CMakeLists.txt  UI.cpp
